re PR c++/9043 ([ABI] incorrect name mangling for array dimension in template function)

cp:
	PR c++/9043
	C++ ABI change: Mangling array indices in templates.
	* decl.c (compute_array_index_type): Reorganize for earlier
	template errors. Use value_dependent_expression_p for abi-2.
	* mangle.c (write_array_type): Check broken mangling for
	expression indices on abi-1
testsuite:
	PR c++/9043
	* g++.dg/abi/mangle20-1.C: New test.
	* g++.dg/abi/mangle20-2.C: New test.

From-SVN: r74707